js/js.translator/testData/incremental/invalidation/defaultParamMethod/main/usage2.kt
internal fun usage2(b: A) = b.f() + 2